Natural Highs First Commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,42 @@
 <resources>
-    <string name="app_name">Chat Room</string>
+    <string name="app_name">Natural Highs</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="gender_id">Gender Identity</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="gender_neutral">Gender Neutral</string>
+    <string name="prefer_not_to_say">Prefer Not To Say</string>
+    <string name="age">Age</string>
+    <string name="sexual_orientation">Sexual Orientation</string>
+    <string name="straight">Straight</string>
+    <string name="gay">Gay</string>
+    <string name="bisexual">Bisexual</string>
+    <string name="asexual">A-Sexual</string>
+    <string name="ethnicity">Ethnicity - Check all that Apply</string>
+    <string name="asian">Asian</string>
+    <string name="black_african">Black/African</string>
+    <string name="white_caucasian">White/Caucasian</string>
+    <string name="hispanic_latinx">Hispanic/LatinX</string>
+    <string name="native_american">Native American</string>
+    <string name="pacific_islander">Pacific Islander</string>
+    <string name="other">Other</string>
+    <string name="ethnicity_other">Ethnicity</string>
+    <string name="education_level">Education Level</string>
+    <string name="elementary_school">Elementary School</string>
+    <string name="middle_school">Middle School</string>
+    <string name="high_school">High School</string>
+    <string name="higher_education">Higher Education</string>
+    <string name="home_school">Home School</string>
+    <string name="city">City</string>
+    <string name="state">State</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="school">School</string>
+    <string name="referred_by">Referred By</string>
+    <string name="self">Self</string>
+    <string name="friend">Friend</string>
+    <string name="parent_guardian">Parent/Guardian</string>
+    <string name="court_system">Court System</string>
     <string name="input">Input</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
